--- a/MoneyManager/MoneyManager/MoneyManager.csproj
+++ b/MoneyManager/MoneyManager/MoneyManager.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\MoneyManager.Core\MoneyManager.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+
 </Project>
